tests/paczka1/fuzzy1/56127961.err
Error in line 1: XcHmK8twg S251 71,9
Error in line 4: A95 A584 18,8
Error in line 15: iZU A858 5,0
Error in line 22: iZU A95 81,8
Error in line 26: iZU A858 21,6
Error in line 27: zWPtkOsE A584 57,4
